<resources>
    <string name="app_name">eAnimify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Login form text  -->
    <string name="login_form">Login</string>
    <string name="pls_login">Please login to continue</string>
    <string name="email_input">Email Address</string>
    <string name="password_input">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember me</string>

    <!--  Create Account form text  -->
    <string name="create_account">Create New Account</string>
    <string name="pls_register">Please register to continue</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="Submit">Submit</string>
    <string name="Alr_acc">Already have an Account?</string>
    <string name="sign_out">Logout</string>
    <!--  Strong password text  -->
    <string name="password_is_too_short">Password is too short</string>
    <string name="password_must_contain_at_least_one_uppercase_letter">Password must contain at least one uppercase letter</string>
    <string name="password_must_contain_at_least_one_lowercase_letter">Password must contain at least one lowercase letter</string>
    <string name="password_must_contain_at_least_one_digit">Password must contain at least one digit</string>
    <string name="password_must_contain_at_least_one_special_symbol">Password must contain at least one special symbol</string>
    <string name="strong_password">Strong password</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">User\'s Fullname</string>
    <string name="nav_header_subtitle">user.email@eanimify.com</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Animal Library</string>
    <string name="menu_library">Library</string>
    <string name="camera_button_description">Take a photo</string>
    <string name="displayed_image">Display Image</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="animal_name">Animal Name</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="animal_information">Animal Information</string>
    <string name="scientific_name">Scientific Name:</string>
    <string name="description">Description:</string>
    <string name="endanger_level">Endanger Level:</string>
    <string name="family_name">Family Name:</string>
    <string name="province">Province:</string>
    <string name="taxonomic_group">Taxonomic Group:</string>
    <string name="Filter">Filter</string>
    <string name="Sortby">Sort by</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="no_images_to_display">No images to display</string>
    <string name="delete">Delete</string>
    <string name="splash_logo_description">Splash logo</string>
    <string name="home_message">This Application named eAnimify. The main purpose is to give people a way to know endemic animals in the Philippines, and a way to identify and give info about them.
    Because of limited resources and time, the amount of endemic animal in this app is 104.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_pass">Change Password</string>
    <string name="delete_acc">Delete Account</string>
    <string name="ChangePassword">Change Password</string>
    <string name="password_does_not_match">Password does not match</string>


</resources>
