<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"

        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/login_form_background"
                android:textSize="32sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pls_register"
                android:alpha="0.7"/>
            <!--      Name      -->
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="0.7"
                        android:text="@string/firstName"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="0.7"
                        android:text="@string/lastName"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/firstname_TextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="Enter First Name"
                        android:inputType="text"
                        tools:ignore="LabelFor" />

                    <EditText
                        android:id="@+id/lastname_TextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="Enter Last Name"
                        android:inputType="text"
                        tools:ignore="LabelFor" />
                </TableRow>
            </TableLayout>

            <!--      Email Address      -->
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_input"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/email_TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter email address"
                android:drawableEnd="@drawable/done_icon"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />
            <!--     Password       -->
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_input"
                android:alpha="0.7"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/password_TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter Password"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"
                tools:ignore="LabelFor" />

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

<!--                <CheckBox-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/remember_me"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:alpha="0.7"/>-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/forgot_password"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:alpha="0.7"-->
<!--                    tools:ignore="RelativeOverlap" />-->

<!--            </RelativeLayout>-->

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/Submit"
                app:cornerRadius="32dp"
                app:backgroundTint="@drawable/button_bg_color" />

            <!--            <View-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="20dp" />-->
            <View style="@style/Divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Alr_acc"
                    android:paddingStart="0dp"
                    android:paddingEnd="5dp"/>

                <TextView
                    android:id="@+id/login_form_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login_form"
                    android:textColor="@drawable/link_color" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>