<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/buttonLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_home"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/menu_home"
                android:textColor="@color/white"
                app:backgroundTint="@drawable/button_bg_color"
                app:cornerRadius="15dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/menu_gallery"
                android:textColor="@color/white"
                app:backgroundTint="@drawable/button_bg_color"
                app:cornerRadius="15dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_animal_library"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/menu_library"
                android:textColor="@color/white"
                app:backgroundTint="@drawable/button_bg_color"
                app:cornerRadius="15dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>