<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".animalDetails.AnimalDetailsActivity"
    android:fitsSystemWindows="false">
<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/my_toolbar2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:background="?attr/colorPrimary"-->
<!--        android:minHeight="?attr/actionBarSize"-->
<!--        android:theme="?attr/actionBarTheme"-->
<!--        app:title="@string/animal_information"-->
<!--    />-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/animal_information"
            android:fitsSystemWindows="true"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="25dp"
        android:paddingTop="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="263dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="219dp"
                    android:layout_height="177dp"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/displayed_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.7"
                    app:srcCompat="@drawable/ic_images" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/animal_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/animal_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/scientific_name"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/scientific_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:text="@string/description"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:justificationMode="inter_word" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/endanger_level"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/endanger_level_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/family_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/family_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/province"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/province_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/taxonomic_group"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/taxonomic_group_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout >